<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/toolbarColor"
        android:padding="10dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/details_title"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Large"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleConstraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/servingsInput"
        android:text="@string/servings"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/servingsInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tvServings"
        app:layout_constraintStart_toEndOf="@id/tvServings"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_hint"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:inputType="number"
        android:backgroundTint="@color/textColor"
        android:padding="8dp"
        android:maxWidth="40dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tvPortionSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvServings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/portionSizeInput"
        android:text="@string/portion_size"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/portionSizeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPortionSize"
        app:layout_constraintStart_toEndOf="@id/tvPortionSize"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_hint"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/textColor"
        android:padding="8dp"
        android:maxWidth="40dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/portionSizeInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnProceed"
        android:layout_marginEnd="3dp"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="12dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/portionSizeInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="3dp"
        android:text="@string/proceed"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="12dp"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>