<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/newRecipeFragment">

    <fragment
        android:id="@+id/newRecipeFragment"
        android:name="com.nikdi.recipefyai.logicrel.NewRecipeFragment"
        android:label="@string/create_new_recipe"
        tools:layout="@layout/fragment_new_recipe" >

        <action
            android:id="@+id/action_newRecipeFragment_to_ingredientSelectionFragment"
            app:destination="@id/ingredientSelectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_newRecipeFragment_to_temporaryRecipeFragment"
            app:destination="@id/temporaryRecipeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/ingredientSelectionFragment"
        android:name="com.nikdi.recipefyai.logicrel.IngredientSelectionFragment"
        android:label="@string/ingredients_title"
        tools:layout="@layout/fragment_ingredient_selection">

        <argument
            android:name="imageUri"
            app:argType="string"
            app:nullable="true" />

        <action
            android:id="@+id/action_ingredientSelectionFragment_to_temporaryRecipeFragment"
            app:destination="@id/temporaryRecipeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/temporaryRecipeFragment"
        android:name="com.nikdi.recipefyai.logicrel.TemporaryRecipeFragment"
        android:label="@string/cooking_title"
        tools:layout="@layout/fragment_temporary_recipe">

            <argument
                android:name="ingredients"
                app:argType="string[]"
                app:nullable="true"/>
            <argument
                android:name="name"
                app:argType="string"
                app:nullable="true"/>
            <argument
                android:name="servings"
                app:argType="integer" />
            <argument
                android:name="portionSize"
                app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/displaySavedRecipeFragment"
        android:name="com.nikdi.recipefyai.logicrel.DisplaySavedRecipeFragment"
        tools:layout="@layout/fragment_display_saved_recipe">
    </fragment>
</navigation>
