<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_purple_blue"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_from_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Large"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/titleConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleConstraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleConstraintLayout" />

    <EditText
        android:id="@+id/recipeNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/textColor"
        android:hint="@string/enter_hint"
        android:inputType="text"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        app:layout_constraintBaseline_toBaselineOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeNameInput">

        <TextView
            android:id="@+id/tvServings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/servings"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toStartOf="@id/servingsInput"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/servingsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/textColor"
            android:hint="@string/enter_hint"
            android:inputType="number"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            app:layout_constraintBaseline_toBaselineOf="@id/tvServings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/portionSizeInput" />

        <TextView
            android:id="@+id/tvPortionSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/portion_size"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toStartOf="@id/portionSizeInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvServings" />

        <EditText
            android:id="@+id/portionSizeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/textColor"
            android:hint="@string/enter_hint"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            app:layout_constraintTop_toTopOf="@id/tvPortionSize"
            app:layout_constraintBottom_toBottomOf="@id/tvPortionSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPortionSize" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputConstraintLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProceed"
            style="@style/Widget.RecipefyAI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/green"
            android:paddingHorizontal="12dp"
            android:text="@string/proceed"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
            app:icon="@drawable/ic_proceed"
            app:iconPadding="8dp"
            app:iconSize="24dp"
            app:iconTint="@color/textColor"
            app:iconGravity="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.RecipefyAI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/red"
            android:paddingHorizontal="12dp"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.RecipefyAI.Normal"
            app:icon="@drawable/ic_remove"
            app:iconPadding="8dp"
            app:iconSize="24dp"
            app:iconTint="@color/textColor"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnProceed" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>